--- a/style.css
+++ b/style.css
@@ -45,8 +45,6 @@
 @media(max-width: 570px){
 	.first__block{
 		height: 10%;
-
-		background-color: red;
 	}
 	.header__logo{
 		max-width: 40px;
@@ -80,19 +78,16 @@
 	width: 30%;
 	text-align: right;
 }
+.main__firstImg{
+	width: 180px;
+	border-radius: 50%;
+}
 .first__secondBlock{
 	width: 52%;
 	padding: 0 50px;
 }
-.first__thirdBlock{
-	display: flex;
-}
 .first__thirdblock{
 	display: flex;
-}
-.main__firstImg{
-	width: 180px;
-	border-radius: 50%;
 }
 .main__firstTitle{
 	padding: 20px 30px;
@@ -108,6 +103,10 @@
 	border-radius: 1px;
 	border: 1px solid #dbdbdb;	
 }
+.first__thirdBlock{
+	display: flex;
+}
+
 .block__firstParagraph{
 	padding: 13px 30px;
 }
@@ -164,7 +163,6 @@
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	background: yellow;
 }
 a{
 	text-decoration: none;
@@ -181,7 +179,7 @@ a{
 	display: flex;
 }
 .third__blockImgs{
-	width: 71%;
+	width: 65%;
 	margin-top: 2%;
 	display: flex;
 	flex-wrap: wrap;
@@ -191,20 +189,21 @@ a{
 	height: 48vh;
 	padding: 10px 10px;
 }
-@media(max-width: 800px){
+@media(max-width: 830px){
 	.main__secondSection{
 		max-width: 100%;
+		min-width: 80%;
+		display: flex;
 		flex-wrap: nowrap;
 	}
 	.secondSection__image{
-		max-width: 32%;
+		max-width: 30%;
 		max-height: 180px;
 		padding: 2px 2px;
 	}
 }
 footer{
-	margin: 5% 14.5%;
-/*	margin-left: 14.5%;*/
+	margin: 4% 18%;
 	display: flex;
 	justify-content: flex-start;
 	align-items: center;
